Changes to publish validator as lambda in aws